подправил позиционирование iframe и h3

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -113,6 +113,8 @@ a {
   margin-bottom: 1rem;
   font-weight: normal;
   color: #159957; }
+.main-content h3 {
+  text-align: center}
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
